Name:             Hemplate
Version:          0.0.1
Cabal-Version:    >= 1.8
License:          OtherLicense
Author:           Claus Skou Nielsen
Maintainer:       kalusn@gmail.com
Homepage:         https://github.com/kayloos/hemplate
Category:         Language
Synopsis:         A simple template language.
Build-Type:       Simple

Library
  Build-Depends:   base,
                   aeson >= 0.6.1.0,
                   aeson-bson >= 0.3.0,
                   bson >= 0.2.2,
                   parsec >= 3.1.3,
                   text,
                   mtl
  hs-source-dirs:  src
  Exposed-Modules:
    Hemplate.Base
  Other-Modules: Hemplate.Parser, Hemplate.Types, Hemplate.Eval
