Name:             Hemplate
Version:          0.0.1
Cabal-Version:    >= 1.8
License:          OtherLicense
Author:           Claus Skou Nielsen
Maintainer:       kalusn@gmail.com
Homepage:         https://github.com/kayloos/hemplate
Category:         Language
Synopsis:         A simple template language.
Build-Type:       Simple

Library
  Build-Depends:   base,
                   bson == 0.2.2,
                   parsec,
                   text,
                   mtl
  hs-source-dirs:  src
  Exposed-Modules:
    Hemplate.Base
  Other-Modules: Hemplate.Parser, Hemplate.Types, Hemplate.Eval
